fix (cllient): prevent layout shift caused by scrollbar appearance

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
+html {
+  margin-left: calc(100vw - 100%);
+}
+
+body {
+  scrollbar-gutter: stable;
+}
+
 .layout {
   min-height: calc(100vh - 64px);
   background-color: rgba(246, 247, 248, 0.5);
